
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct pollfd {int fd; int events; int revents; } ;


 int AVERROR (int ) ;
 int EAGAIN ;
 int POLLERR ;
 int POLLHUP ;
 int POLLIN ;
 int POLLING_TIME ;
 int POLLOUT ;
 int ff_neterrno () ;
 int poll (struct pollfd*,int,int ) ;

int ff_network_wait_fd(int fd, int write)
{
    int ev = write ? POLLOUT : POLLIN;
    struct pollfd p = { .fd = fd, .events = ev, .revents = 0 };
    int ret;
    ret = poll(&p, 1, POLLING_TIME);
    return ret < 0 ? ff_neterrno() : p.revents & (ev | POLLERR | POLLHUP) ? 0 : AVERROR(EAGAIN);
}
